# FunctionalMonitor

./: .gitignore  AI README  README.md  TEXT.txt  constants.py  edit_daily_essentials.py  essentials.json  get_items_data.py  items.json  low_battery_alert.py  main.py  memos.txt  pyproject.toml
.github/workflows/: gemini_review.py  lint.yml  review.yml
alerts/: alert_contoroller.py  alert_controller.py  alert_manager.py  alert_requester.py
essentials/: daily_essentials.json  edit_daily_essentials.py  items.json  timetable.json
review/: REVIEW_CONTEXT.md  code_reviewer.py  gemini_review.py
rust/: Cargo.toml
rust/src/: main.rs
scripts/: gemini_review.py
weather/: weather_service.py
