[project]
name = "functionalmonitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.135.2",
    "notion-client>=3.0.0",
    "pydantic>=2.12.5",
    "pygame-ce>=2.5.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.42.0",
]

[tool.uv.workspace]
members = ["pygame"]

[tool.mypy]
python_executable = ".venv/Scripts/python.exe"

ignore_missing_imports = true

check_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
